--- a/views/applications/index.ejs
+++ b/views/applications/index.ejs
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h1>Your Apps</h1>
+    <%- include('../partials/_navbar.ejs') %>
+        <h1>Your Apps</h1>
+        <a href="/users/<%=user._id%>/applications/new">Add an App</a>
 </body>
 
 </html>
