--- a/views/applications/new.ejs
+++ b/views/applications/new.ejs
@@ -12,10 +12,10 @@
         <h1>Add a New Application</h1>
         <form action="" method="">
             <label for="company">Company:</label>
-            <input type="text" name="company" id="company" />
+            <input type="text" name="company" id="company" required/>
 
             <label for="title">Title:</label>
-            <input type="text" name="title" id="title" />
+            <input type="text" name="title" id="title" required/>
 
             <label for="notes">Notes:</label>
             <textarea name="notes" id="notes"></textarea>
@@ -24,13 +24,14 @@
             <input type="text" name="postingLink" id="postingLink" />
 
             <label for="status">Status:</label>
-            <select id="status" name="status">
+            <select id="status" name="status" required>
                 <option value="interested">Interested</option>
                 <option value="applied">Applied</option>
                 <option value="interviewing">Interviewing</option>
                 <option value="rejected">Rejected</option>
                 <option value="accepted">Accepted</option>
             </select>
+            <button type="submit">Add Application</button>
         </form>
 </body>
 
