--- a/views/applications/index.ejs
+++ b/views/applications/index.ejs
@@ -13,11 +13,13 @@
         <a href="/users/<%=user._id%>/applications/new">Add an App</a>
 
         <ul>
-            <% applications.forEach((application)=> { %>
+            <% applications.forEach((application)=>{ %>
                 <li>
-                    <%= application.title %> at <%= application.company %>
+                    <a href="/users/<%= user._id %>/applications/<%= application._id %>">
+                        <%= application.title %> at <%= application.company %>
+                    </a>
                 </li>
-                <% }); %>
+                <% }) %>
         </ul>
 </body>
 
