--- a/views/applications/show.ejs
+++ b/views/applications/show.ejs
@@ -23,6 +23,10 @@
         <% } %>
 
         <p>Current Status: <%= application.status %></p>
+
+        <form action="/users/<%= user._id %>/applications/<%= application._id %>?_method=DELETE" method="POST">
+            <button type="submit">Delete this application</button>
+        </form>
 </body>
 
 </html>
