--- a/views/applications/edit.ejs
+++ b/views/applications/edit.ejs
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Editing <%= application.title %>
     </title>
 </head>
 
 <body>
     <%- include('../partials/_navbar.ejs') %>
+    <div class="edit-body">
         <h1>Edit <%= application.title %> at <%= application.company %>
         </h1>
         <form action="/users/<%= user._id %>/applications/<%= application._id %>?_method=PUT" method="POST">
@@ -45,6 +47,7 @@
             </select>   
             <button type="submit">Update Application</button>
         </form>
+    </div>
 </body>
 
 </html>
